Added in new spinner banner and changed image

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,6 +1,7 @@
 @import "./scss/banner.scss";
 @import "./scss/reset.scss";
 @import "./scss/loader.scss";
+@import "./scss/header.scss";
 
 .container {
   margin-left: auto;
