--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -1,7 +1,59 @@
 .banner {
   z-index: 100;
   position: relative;
-  height: 70vh;
+  // height: 70vh;
+  // background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50vh;
+  opacity: 0;
+  transition: all 1s;
+}
+
+.circle {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  background: #fff;
+  border-radius: 50%;
+  background: url(https://blog.darrenxu.com/content/images/2021/04/daz-cropped-2.png);
+  background-size: cover;
+}
+
+.text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation: rotateText 10s linear infinite;
+}
+
+.text span {
+  position: absolute;
+  left: 50%;
+  font-size: 1.2em;
+  transform-origin: 0 100px;
+}
+
+@keyframes rotateText {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .transition-image {
