--- a/src/globals.scss
+++ b/src/globals.scss
@@ -2,6 +2,7 @@
 @import "./scss/reset.scss";
 @import "./scss/loader.scss";
 @import "./scss/header.scss";
+@import "./scss/projects.scss";
 
 .container {
   margin-left: auto;
