--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -16,6 +16,7 @@
   }
   .header-inner {
     width: 100%;
+    max-width: 1200px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,15 +29,12 @@
       }
     }
     .nav {
-      @media (max-width: 1200px) {
-        display: none;
-      }
+      // @media (max-width: 1200px) {
+      //   display: none;
+      // }
       display: flex;
       align-items: center;
       justify-content: center;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
       li {
         list-style: none;
         margin: 0 40px;
@@ -45,43 +43,6 @@
           color: #000;
           white-space: nowrap;
         }
-      }
-    }
-    .contact {
-      @media (max-width: 1200px) {
-        flex: 1;
-      }
-      a {
-        color: #000;
-        text-decoration: none;
-        border-bottom: 2px solid #000;
-        padding-bottom: 12px;
-        white-space: nowrap;
-        @media (max-width: 992px) {
-          border: none;
-        }
-      }
-    }
-    .hamburger-menu {
-      height: 56px;
-      width: 56px;
-      border-radius: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      transition: 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-      cursor: pointer;
-
-      @media (min-width: 1200px) {
-        display: none;
-      }
-      span {
-        width: 20px;
-        height: 3px;
-        margin: 2px 0;
-        background: #000;
-        display: block;
       }
     }
   }
