--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -10,6 +10,33 @@
   min-height: 50vh;
   opacity: 0;
   transition: all 1s;
+
+  &-menu-item {
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.2s;
+    &:hover {
+      transform: scale(1.05) !important;
+    }
+  }
+
+  &-vertical-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0 108px;
+    font-size: 1.8rem;
+
+    @media (max-width: 1200px) {
+      padding: 0 72px;
+      font-size: 1.6rem;
+    }
+    @media (max-width: 992px) {
+      padding: 0 12px;
+      height: 96px;
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .circle {
