--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -103,12 +103,14 @@
     margin: 0 auto;
     height: unset;
 
-    @media (max-width: 768px) {
-      top: -56px;
-    }
+    // @media (max-width: 768px) {
+    //   top: -56px;
+    // }
     img {
       width: 100%;
       max-width: 100%;
+      height: 20vh;
+      object-fit: cover;
     }
   }
 }
