--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -10,10 +10,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
   &__h2 {
     font-size: 4rem;
     color: #fff;
-    padding-bottom: 2rem;
   }
   &-card-container {
     display: grid;
@@ -21,84 +21,9 @@
     gap: 3em;
     position: relative;
     max-width: 75%;
-  }
-  .selected-project-card {
-    border-radius: 1.2rem;
-    opacity: 1;
-    transform-origin: 50% 50% 0px;
-    position: relative;
-    overflow: hidden;
 
-    flex: 1 1 auto;
-    background: #fff;
-    box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%),
-      0 1px 5px 0 rgb(0 0 0 / 12%);
-    transform-origin: 50% 50% 0px;
-    position: absolute;
-    z-index: 1;
-    top: 12.5%;
-    left: 12.5%;
-    display: flex;
-    flex-direction: column;
-    width: 75%;
-    height: 75%;
-    padding: 2rem;
-
-    &__h2 {
-      font-size: 3rem;
-      color: #000;
-      padding: 24px 16px;
-    }
-
-    &__h5 {
-      background-color: white;
-      padding: 16px;
-      padding-top: 0px;
-      font-size: 1.2rem;
-    }
-
-    &-close {
-      position: absolute;
-      right: 32px;
-      top: 32px;
-      width: 32px;
-      height: 32px;
-      opacity: 0.3;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
-
-  .project-card {
-    background-color: white;
-    border-radius: 5px;
-    margin: 10px;
-    box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%),
-      0 1px 5px 0 rgb(0 0 0 / 12%);
-    position: relative;
-    padding-bottom: 10px;
-
-    cursor: pointer;
-
-    transition: all 0.2s ease-in-out;
-
-    &:hover {
-      transform: scale(1.1);
-    }
-
-    &__h2 {
-      font-size: 3rem;
-      color: #000;
-      padding: 24px 16px;
-    }
-
-    &__h5 {
-      background-color: white;
-      padding: 16px;
-      padding-top: 0px;
-      font-size: 1.2rem;
+    @media (max-width: 992px) {
+      grid-template-columns: auto;
     }
   }
 }
