--- a/src/globals.scss
+++ b/src/globals.scss
@@ -3,6 +3,7 @@
 @import "./scss/loader.scss";
 @import "./scss/header.scss";
 @import "./scss/projects.scss";
+@import "./scss/experienceList.scss";
 
 .container {
   margin-left: auto;
