--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -56,7 +56,7 @@
   height: 150px;
   background: #fff;
   border-radius: 50%;
-  background: url(https://blog.darrenxu.com/content/images/2021/04/daz-cropped-2.png);
+  background: url("../static/daz-cropped-2.png");
   background-size: cover;
 }
 
