--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -15,6 +15,13 @@
     padding: 10px;
     cursor: pointer;
     transition: all 0.2s;
+
+    & a {
+      text-decoration: none;
+      color: inherit;
+      font-weight: inherit;
+    }
+
     &:hover {
       transform: scale(1.05) !important;
     }
@@ -32,9 +39,10 @@
       font-size: 1.6rem;
     }
     @media (max-width: 992px) {
-      padding: 0 12px;
-      height: 96px;
-      font-size: 1.2rem;
+      display: none;
+      // padding: 0 12px;
+      // height: 96px;
+      // font-size: 1.2rem;
     }
   }
 }
