--- a/src/globals.scss
+++ b/src/globals.scss
@@ -4,6 +4,7 @@
 @import "./scss/header.scss";
 @import "./scss/projects.scss";
 @import "./scss/experienceList.scss";
+@import "./scss/floatingActionButton.scss";
 
 .container {
   margin-left: auto;
