--- a/src/scss/floatingActionButton.scss
+++ b/src/scss/floatingActionButton.scss
@@ -15,16 +15,14 @@
   width: 60px;
   height: 60px;
   text-align: center;
-  background: -webkit-linear-gradient(45deg, #8769a9, #507cb3);
-  background: -o-linear-gradient(45deg, #8769a9, #507cb3);
-  background: linear-gradient(45deg, #8769a9, #507cb3);
+  background-color: black;
   color: #fff;
   line-height: 50px;
   position: absolute;
   border-radius: 50% 50%;
   bottom: 0px;
   right: 0px;
-  border: 5px solid #b2bedc;
+  border: 5px solid black;
   /* opacity: 0.3; */
   opacity: 1;
   transition: all 0.4s;
@@ -72,8 +70,8 @@
 .floatingMenu li a {
   padding: 8px 15px;
   display: inline-block;
-  background: #ccd7f5;
-  color: #6077b0;
+  background: black;
+  color: white;
   border-radius: 5px;
   overflow: hidden;
   white-space: nowrap;
