--- a/src/scss/experienceList.scss
+++ b/src/scss/experienceList.scss
@@ -57,3 +57,33 @@
     }
   }
 }
+
+.experience-container {
+  display: flex;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  &__h2 {
+    font-size: 4rem;
+    color: #fff;
+  }
+  &-card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    gap: 3em;
+    position: relative;
+    max-width: 75%;
+
+    @media (max-width: 992px) {
+      grid-template-columns: auto;
+    }
+  }
+}
