--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -38,6 +38,9 @@
       li {
         list-style: none;
         margin: 0 40px;
+        @media (max-width: 992px) {
+          margin: 0 15px;
+        }
         a {
           text-decoration: none;
           color: #000;
