--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -1,29 +1,9 @@
-.project-container {
-  display: flex;
-}
-
-.content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  &__h2 {
+#projects {
+  width: 80%;
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 10rem;
+  & h2 {
     font-size: 4rem;
-    color: #fff;
-  }
-  &-card-container {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    gap: 3em;
-    position: relative;
-    max-width: 75%;
-
-    @media (max-width: 992px) {
-      grid-template-columns: auto;
-    }
   }
 }
