New grid layout

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -5,6 +5,7 @@
 @import "./scss/projects.scss";
 @import "./scss/experienceList.scss";
 @import "./scss/floatingActionButton.scss";
+@import "./scss//gridLayout.scss";
 
 .container {
   margin-left: auto;
