--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -3,7 +3,7 @@
   position: relative;
   // height: 70vh;
   // background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  background-color: white;
+  background-color: antiquewhite;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,8 +49,8 @@
 
 .circle {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   background: #fff;
   display: flex;
@@ -79,7 +79,8 @@
   position: absolute;
   left: 50%;
   font-size: 1.2em;
-  transform-origin: 0 100px;
+  transform-origin: 0 125px;
+  padding-top: 15px;
 }
 
 @keyframes rotateText {
