--- a/src/scss/floatingActionButton.scss
+++ b/src/scss/floatingActionButton.scss
@@ -4,6 +4,10 @@
   bottom: 45px;
   right: 45px;
   z-index: 999999999;
+  display: none;
+  @media (max-width: 992px) {
+    display: block;
+  }
 }
 
 .floatingButtonInner {
