--- a/src/globals.scss
+++ b/src/globals.scss
@@ -12,6 +12,10 @@ body {
   background-color: antiquewhite;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
