--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -101,6 +101,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
   img {
     width: 800px;
     display: flex;
