--- a/src/scss/experienceList.scss
+++ b/src/scss/experienceList.scss
@@ -3,6 +3,15 @@
   max-width: 1200px;
   margin: auto;
   margin-top: 10rem;
+  &__header {
+    display: flex;
+    align-items: center;
+  }
+  &__line {
+    width: 100%;
+    height: 3px;
+    background-color: black;
+  }
   @media (max-width: 992px) {
     width: 90%;
   }
@@ -73,7 +82,7 @@
 
   &__h2 {
     font-size: 4rem;
-    color: #fff;
+    margin: 0px 5%;
   }
   &-card-container {
     display: grid;
