--- a/src/scss/experienceList.scss
+++ b/src/scss/experienceList.scss
@@ -3,10 +3,7 @@
   max-width: 1200px;
   margin: auto;
   margin-top: 10rem;
-  &__header {
-    display: flex;
-    align-items: center;
-  }
+
   &__line {
     width: 100%;
     height: 3px;
@@ -17,8 +14,8 @@
   }
   &--item {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 50px;
+    grid-template-columns: 45% 45%;
+    grid-column-gap: 10%;
     @media (max-width: 992px) {
       grid-template-columns: 1fr;
     }
@@ -27,17 +24,23 @@
     }
 
     &:first-child {
-      margin-top: 20rem;
+      margin-top: 10rem;
       @media (max-width: 992px) {
         margin-top: 5rem;
       }
     }
 
     &:not(:first-child) {
-      padding-top: 30rem;
+      margin-top: 20rem;
       @media (max-width: 992px) {
-        padding-top: 10rem;
+        margin-top: 10rem;
       }
+    }
+
+    &__img {
+      display: flex;
+      align-items: center;
+      height: 100%;
     }
 
     &__img img {
@@ -81,8 +84,9 @@
   flex-direction: column;
 
   &__h2 {
-    font-size: 4rem;
-    margin: 0px 5%;
+    font-size: 5rem;
+    // margin: 0px 5%;
+    margin-bottom: 50px;
   }
   &-card-container {
     display: grid;
